k8s/mysql-slave-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-slave
  namespace: prod
spec:
  serviceName: mysql-slave
  replicas: 1

  selector:
    matchLabels:
      app: mysql-slave

  template:
    metadata:
      labels:
        app: mysql-slave
    spec:
      nodeSelector:
        env: prod

      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: mysql-config
              mountPath: /etc/mysql/conf.d

      volumes:
        - name: mysql-config
          configMap:
            name: mysql-slave-config

  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
