k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: prod
spec:
  serviceName: mysql
  replicas: 2

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        env: prod

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mysql
              topologyKey: kubernetes.io/hostname

      containers:
        - name: mysql
          image: mysql:8.0

          command:
            - bash
            - "-c"
            - |
              ORDINAL=$(echo $POD_NAME | awk -F'-' '{print $NF}')
              SERVER_ID=$((ORDINAL + 1))

              echo "[mysqld]" > /etc/mysql/conf.d/server-id.cnf
              echo "server-id=$SERVER_ID" >> /etc/mysql/conf.d/server-id.cnf

              # Only Master gets binlog
              if [ "$ORDINAL" -eq "0" ]; then
                echo "log-bin=mysql-bin" >> /etc/mysql/conf.d/server-id.cnf
              fi

              exec docker-entrypoint.sh mysqld

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
