k8s/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8083"
    spec:
      nodeSelector:
        env: prod
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: vets-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: vets-service
          image: ross1832/spring-petclinic-vets-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 3
